cmake_minimum_required(VERSION 3.10)

project(Terminal)

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

find_package(SFML COMPONENTS graphics window system)

include_directories(${SFML_INCLUDE_DIR})

link_libraries(${SFML_LIBRARIES})

set(SRC )
set(INC )
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/Frontend.hpp")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/OptionFile.hpp")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/SystemFrontend.hpp")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/SystemFrontend.cpp")
if ("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
    list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/SystemFrontend.Windows.cpp")
    list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/WslFrontend.cpp")
    list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/WslFrontend.hpp")
    list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/WslOpcodes.hpp")
    list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/wsl-backend/Connection.cpp")
    list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/wsl-backend/Connection.hpp")
    list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/wasl-backend/Packet.cpp")
    list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/wsl-backend/Packet.hpp")
    list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/wsl-backend/WslBackend.cpp")
else()
    list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/SystemFrontend.Unix.cpp")
endif()
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/Terminal.hpp")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/Terminal.cpp")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/Terminal.Draw.cpp")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/Terminal.Event.cpp")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/Terminal.Draw.cpp")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/encoding/uk.inc")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/encoding/DECdrawing.inc")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/encoding.c")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/fullwidth.inc")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/keyboard.c")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/mouse.c")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/parser.c")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/pen.c")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/rect.h")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/screen.c")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/state.c")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/unicode.c")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/utf8.h")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/vterm_internal.h")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/vterm_keycodes.h")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/vterm.c")
list(APPEND SRC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/vterm.h")
list(APPEND INC "${CMAKE_CURRENT_LIST_DIR}/Terminal/Frontend.hpp")
list(APPEND INC "${CMAKE_CURRENT_LIST_DIR}/Terminal/OptionFile.hpp")
list(APPEND INC "${CMAKE_CURRENT_LIST_DIR}/Terminal/SystemFrontend.hpp")
if ("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
    list(APPEND INC "${CMAKE_CURRENT_LIST_DIR}/Terminal/WslFrontend.hpp")
    list(APPEND INC "${CMAKE_CURRENT_LIST_DIR}/Terminal/WslOpcodes.hpp")
    list(APPEND INC "${CMAKE_CURRENT_LIST_DIR}/Terminal/wsl-backend/Connection.hpp")
    list(APPEND INC "${CMAKE_CURRENT_LIST_DIR}/Terminal/wsl-backend/Packet.hpp")
endif()
list(APPEND INC "${CMAKE_CURRENT_LIST_DIR}/Terminal/Terminal.hpp")
list(APPEND INC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/encoding/uk.inc")
list(APPEND INC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/encoding/DECdrawing.inc")
list(APPEND INC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/fullwidth.inc")
list(APPEND INC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/rect.h")
list(APPEND INC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/utf8.h")
list(APPEND INC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/vterm_internal.h")
list(APPEND INC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/vterm_keycodes.h")
list(APPEND INC "${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/vterm.h")

include_directories("${CMAKE_CURRENT_LIST_DIR}/Terminal/")
include_directories("${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/")
include_directories("${CMAKE_CURRENT_LIST_DIR}/Terminal/vterm/encoding/")
include_directories("${CMAKE_CURRENT_LIST_DIR}/Terminal/wsl-backend/")

add_library(terminal SHARED ${SRC})
set_target_properties(terminal PROPERTIES PUBLIC_HEADER "${INC}")
target_compile_features(terminal PRIVATE cxx_std_14)
install(TARGETS terminal)

